# NetixFS

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPECS.md
config/: config.example.toml
src/: config.rs  logging.rs  main.rs  service.rs  user.rs
src/config/: parameters.rs
src/service/: ready.rs
