[package]
name = "netixfs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = [
  "net",
  "rt",
  "rt-multi-thread",
  "tokio-macros",
  "fs",
] }
clap = { version = "4.6.1", features = ["derive", "env"] }
headers = "0.4.1"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower-http = { version = "0.6.10", features = ["auth", "compression-br", "decompression-br", "normalize-path", "on-early-drop", "sensitive-headers", "set-header", "timeout", "trace", "tracing", "util"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
eyre = "0.6.12"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
futures = "0.3.32"
tower = "0.5.3"
http-body-util = "0.1.3"
bytes = "1.11.1"
tokio-util = "0.7.18"
serde_json = "1.0.149"
