[package]
name = "netixfs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = [
  "net",
  "rt",
  "rt-multi-thread",
  "tokio-macros",
  "fs",
] }
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
headers = "0.4.1"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower-http = { version = "0.6.10", features = [
  "auth",
  "compression-br",
  "cors",
  "decompression-br",
  "normalize-path",
  "on-early-drop",
  "sensitive-headers",
  "set-header",
  "timeout",
  "trace",
  "tracing",
  "util",
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
toml = "1.1.2"
eyre = "0.6.12"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
tracing = "0.1.44"
futures = "0.3.32"
tower = "0.5.3"
http-body-util = "0.1.3"
bytes = "1.11.1"
tokio-util = "0.7.18"
serde_json = "1.0.149"
humantime = "2.3.0"
humantime-serde = "1.1.1"
bytesize = { version = "2.3.1", features = ["serde"] }
serde_with = "3.20.0"
either = "1.16.0"
url = { version = "2.5.8", features = ["serde"] }
paste = "1"
lazy_static = "1.5.0"
bon = "3.9.1"
simple-eyre = "0.3.1"
assert_matches = "1.5.0"
